# CatEngine-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  CatEngine-Shutdown.json  CatEngine-Startup.json  README.md  imgui.ini  prebuild.lua
CatEditor/: CMakeLists.txt  prebuild.lua
CatEditor/src/: CatEditorApp.cpp  EditorLayer.cpp  EditorLayer.h
CatEngine/: CMakeLists.txt  prebuild.lua
CatEngine/src/: CatEngine.h  cepch.h
CatEngine/src/CatEngine/Core/: Application.cpp  Application.h  Core.h  Entrypoint.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  TimeStep.cpp  TimeStep.h  UUID.cpp  UUID.h  Utils.cpp  Utils.h  Window.cpp  Window.h
CatEngine/src/CatEngine/Debug/: Instrumentor.h
CatEngine/src/CatEngine/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
CatEngine/src/CatEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
CatEngine/src/CatEngine/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
CatEngine/src/CatEngine/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
CatEngine/src/CatEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
CatEngine/src/CatEngine/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h
CatEngine/src/CatEngine/Scene/Components/: Components.cpp  Components.h
CatEngine/src/CatEngine/Scene/Components/2D/: SpriteRenderer.h
CatEngine/src/CatEngine/Scene/Components/3D/: TransformComponent.h
CatEngine/src/CatEngine/Scene/Components/Renderer/: CameraComponent.h
CatEngine/src/CatEngine/Scene/Components/Required/: InformationComponents.h
CatEngine/src/CatEngine/Scene/Components/Scripting/: ScriptComponent.h
resources/shader/: QuadShader.frag  QuadShader.vert  vert.glsl
